--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,7 @@
     "prisma:studio": "prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^6.0.0",
+    "@prisma/client": "6.0.0",
     "@types/cors": "^2.8.17",
     "@types/swagger-ui-express": "^4.1.7",
     "axios": "^1.7.8",
@@ -30,7 +30,7 @@
     "express": "^4.21.1",
     "mathjs": "^14.0.0",
     "openapi-types": "^12.1.3",
-    "prisma": "^6.0.0",
+    "prisma": "6.0.0",
     "swagger-ui-express": "^5.0.1",
     "zod": "^3.23.8"
   }
