--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,15 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tanstack/react-query": "^5.62.0",
+    "@types/lodash.debounce": "^4.0.9",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "file-saver": "^2.0.5",
     "init": "^0.1.2",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.462.0",
     "next": "15.0.1",
     "next-themes": "^0.4.3",
@@ -32,7 +35,8 @@
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
