--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/sortable": "^9.0.0",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
@@ -30,6 +32,7 @@
     "prettier": "^3.4.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "recharts": "^2.13.3",
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
