--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
     "prettier": "^3.4.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.13.3",
     "shadcn": "^2.1.6",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
